--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Testimonial Grid - Community Gallery</title>
+    <title>BotDevFather - Review • Testimonials</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome for icons -->
@@ -133,8 +133,8 @@
         <div class="max-w-7xl mx-auto">
             <!-- Header -->
             <div class="text-center mb-12">
-                <h1 class="text-3xl md:text-4xl font-bold mb-2">Community Gallery</h1>
-                <p class="text-gray-600">Join <span id="totalReviews" class="font-semibold text-blue-600">2</span> others who shared their experiences</p>
+                <h1 class="text-3xl md:text-4xl font-bold mb-2">My Work Review Gallery</h1>
+                <p class="text-gray-600">Join <span id="totalReviews" class="font-semibold text-blue-600">0</span> others who shared their experiences</p>
             </div>
             
             <!-- Masonry Grid -->
@@ -372,7 +372,7 @@
                                     </div>
                                     <div class="ml-3">
                                         <p class="text-sm text-blue-700">
-                                            <strong>Note:</strong> Your review will be publicly visible. The security key is stored encrypted and can't be recovered if lost.
+                                            <strong>Note:</strong> Your review will be publicly visible. The security key is stored encrypted and can't be recovered if lost. It is required when you want to edit the review.
                                         </p>
                                     </div>
                                 </div>
