--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="mt-16 pt-12 border-t border-gray-200" id="reviewFormSection">
                 <div class="text-center mb-12">
                     <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">Share Your Experience</h2>
-                    <p class="text-gray-600 max-w-2xl mx-auto">Add your own review to be featured in our community gallery. Upload your photo, share your thoughts, and connect your social profile.</p>
+                    <p class="text-gray-600 max-w-2xl mx-auto">Add your review to be @BotDevFather in our review gallery. Upload your photo, share your experiences, and make them him trustworthy.</p>
                 </div>
                 
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
